update server query terms
